<resources>
    <string name="app_name">Rent_It</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="create_account">Create Account</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>

    <!--for tutotial-->
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>

    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>
    <string name="title_trade_item">Trade Item</string>
    <string name="my_inventory">My Inventory</string>
    <string name="my_rentals">My Rentals</string>
    <string name="claims">Claims</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--tutorial 2.0-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="my_account">My Account</string>
    <string name="nick_name">nick name</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="your_email_address">Your Email address</string>
    <string name="your_real_name">Your real name</string>
    <string name="item_name">item name</string>
    <string name="return_on_date">Returned on date</string>
    <string name="file_damage_claim">File Damage Claim ></string>
    <string name="last_rented_on_date">Last rented on date</string>
    <string name="edit_listing">Edit Listing ></string>
    <string name="write_review">Write Review ></string>
    <string name="requested_by_sb">Rental Requested by somebody </string>
    <string name="lend_item">Lend Item ></string>
    <string name="rent_item">Rent Item ></string>
    <string name="return_item">Return Item ></string>
    <string name="camp">Camping</string>
    <string name="tools">Tools</string>
    <string name="wheels">Wheels</string>
    <string name="electronics">Electronics</string>
    <string name="sports">Sports</string>
    <string name="home">Home</string>
    <string name="zip">zip code</string>
    <string name="status">status</string>
    <string name="rental">($30/day)</string>
    <string name="rental2">$30/day</string>
    <string name="description">details of description</string>
    <string name="view_images">View Images</string>
    <string name="condition">Condition</string>
    <string name="reviews">Reviews</string>
    <string name="review_title">Outstanding!</string>
    <string name="available">Available</string>
    <string name="four_person_tent">4 Person Tent</string>
    <string name="code48085">48085</string>
    <string name="requested_booking_on"> Requested booking on date</string>
    <string name="condition_details">condition details</string>
    <string name="more_reviews">Read More Reviews</string>
    <string name="owner">Owner</string>
    <string name="owner_name">Jasmine</string>
    <string name="member">Member since 2017</string>
    <string name="rent_now">Rent Now</string>
    <string name="return_now">Return Now</string>
    <string name="count">(3)</string>
    <string name="search_title">4 Person Tent</string>
    <string name="search_title2">4 Person Tent 48085</string>
    <string name="request_booking">Request Booking</string>
    <string name="inbox">Inbox</string>
    <string name="key_words">Key words</string>

<!-- test-->
    <string-array name="names">
                 <item >Person1</item>
                 <item >Person2</item>
                 <item >Person3</item>
                 <item >Person4</item>
                 <item >Person5</item>
                 <item >Person6</item>
                 <item >Person7</item>
                 <item >Person8</item>
                 <item >Person9</item>
             </string-array>

    <string-array name="claims">
        <item >claim1</item>
        <item >claim2</item>
        <item >claim3</item>
        <item >claim4</item>
        <item >claim5</item>
        <item >claim6</item>
        <item >claim7</item>
        <item >claim8</item>
        <item >claim9</item>
    </string-array>

    <string-array name="item">
        <item >item1</item>
        <item >item2</item>
        <item >item3</item>
        <item >item4</item>
        <item >item5</item>
        <item >item6</item>
        <item >item7</item>
        <item >item8</item>
        <item >item9</item>
    </string-array>


</resources>
