<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/container_body"
            android:layout_width="fill_parent"
            android:layout_height="1000dp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="192dp"
                android:layout_marginTop="15dp"

                android:src="@drawable/image_camp"
                android:id="@+id/imageView"

                />

            <TextView
                android:text="@string/view_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/view_images"
                android:textSize="20sp"
                android:textColor="#FFFF"
                android:layout_marginBottom="16dp"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="240dp"
                android:layout_marginStart="240dp" />

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="39dp"
                style="?android:attr/ratingBarStyleIndicator"
                android:numStars = "5"
                android:rating   = "3"
                android:id="@+id/ratingBar"
                android:layout_below="@+id/imageView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/four_person_tent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:layout_marginTop="10dp"
                android:id="@+id/name"
                android:layout_below="@+id/imageView"
                android:layout_alignLeft="@+id/ratingBar"
                android:layout_alignStart="@+id/ratingBar" />

            <TextView
                android:text="(3)"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name"
                android:layout_toRightOf="@+id/ratingBar"
                android:layout_toEndOf="@+id/ratingBar"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:textSize="20sp"
                android:id="@+id/count" />

            <TextView
                android:text="@string/available"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:layout_marginStart="21dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/availability"
                android:layout_alignTop="@+id/name"
                android:layout_alignLeft="@+id/view_images"
                android:layout_alignStart="@+id/view_images" />

            <TextView
                android:text="@string/code48085"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/availability"
                android:textColor="@color/colorPrimary"
                android:layout_alignLeft="@+id/availability"
                android:layout_alignStart="@+id/availability"
                android:id="@+id/code" />

            <TextView
                android:text="@string/rental2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/orangered"
                android:textSize="22sp"
                android:id="@+id/rental"
                android:layout_alignTop="@+id/count"
                android:layout_alignLeft="@+id/view_images"
                android:layout_alignStart="@+id/view_images"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp" />

            <TextView
                android:text="@string/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:id="@+id/description"
                android:textSize="15sp"
                android:layout_below="@+id/ratingBar"
                android:layout_alignLeft="@+id/ratingBar"
                android:padding="10dp"
                android:layout_alignStart="@+id/ratingBar" />

            <TextView
                android:text="@string/condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/condition"
                android:layout_below="@+id/description"
                android:layout_alignLeft="@+id/name"
                android:layout_alignStart="@+id/name" />

            <TextView
                android:text="@string/condition_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="15sp"
                android:layout_marginTop="9dp"
                android:id="@+id/condition_description"
                android:layout_below="@+id/condition"
                android:layout_alignLeft="@+id/description"
                android:layout_alignStart="@+id/description" />


        </RelativeLayout>>
    </LinearLayout>
</ScrollView>