<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:src="@drawable/icon_item"

            android:id="@+id/item_picture" />

        <TextView
            android:text="@string/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:id="@+id/textView"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/item_picture"
            android:layout_toEndOf="@+id/item_picture" />

        <TextView
            android:text="@string/rental"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textSize="17sp"
            android:textColor="@color/orangered"
            android:layout_marginRight="19dp"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="7dp"
            android:layout_below="@+id/textView4"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:text="@string/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignLeft="@+id/textView4"
            android:layout_alignStart="@+id/textView4" />

        <TextView
            android:text="@string/zip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_marginTop="22dp"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView" />

        <RatingBar
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:numStars = "5"
            android:rating   = "4"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_marginTop="54dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="96dp"
            android:layout_marginEnd="96dp" />

    </RelativeLayout>


</RelativeLayout>