<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"

            android:src="@drawable/icon_item"

            android:id="@+id/imageView2" />

        <TextView
            android:text="@string/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:id="@+id/textView"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/imageView2"
            android:layout_toEndOf="@+id/imageView2" />

        <TextView
            android:text="@string/rent_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView4"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:textSize="17sp"
            android:textColor="@color/orangered"
            android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="25dp" />

        <TextView
            android:text="@string/requested_booking_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_below="@+id/textView"
            android:layout_alignLeft="@+id/textView"
            android:layout_alignStart="@+id/textView" />

    </RelativeLayout>


</RelativeLayout>